- have to be logged in to chat - Admin can now add new debates from the admin panel - styling for the homepage (needs more work)

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "bcryptjs": "*",
-    "body-parser": "*",
+    "body-parser": "^1.16.1",
     "connect-flash": "*",
     "cookie-parser": "^1.4.1",
     "ejs": "*",
