--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "loginapp",
+  "name": "debatable",
   "version": "1.0.0",
   "description": "Simple authentication system",
   "main": "app.js",
@@ -13,17 +13,28 @@
     "bcryptjs": "*",
     "body-parser": "^1.16.1",
     "connect-flash": "*",
+    "connect-mongo": "^1.3.2",
+    "connect-redis": "^3.2.0",
+    "cookie": "^0.3.1",
     "cookie-parser": "^1.4.1",
     "ejs": "*",
     "express": "*",
     "express-messages": "*",
     "express-session": "*",
+    "express-socket.io-session": "^1.3.2",
     "express-validator": "*",
+    "install": "^0.8.7",
+    "memory-store": "0.0.1",
     "mongodb": "*",
     "mongoose": "*",
+    "npm": "^4.3.0",
     "passport": "*",
     "passport-http": "*",
     "passport-local": "*",
-    "socket.io": "^1.7.3"
+    "passport.socket.io": "0.0.0",
+    "passport.socketio": "^3.7.0",
+    "redis-server": "^1.1.0",
+    "socket.io": "^1.7.3",
+    "socket.io-passport": "^0.1.1"
   }
 }
