--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Brad Traversy",
   "license": "ISC",
   "dependencies": {
+    "async": "^2.1.5",
     "bcryptjs": "*",
     "body-parser": "^1.16.1",
     "connect-flash": "*",
