--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "cookie-parser": "^1.4.1",
     "ejs": "*",
     "express": "*",
+    "express-handlebars": "^3.0.0",
     "express-messages": "*",
     "express-session": "*",
     "express-socket.io-session": "^1.3.2",
